<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="80dp"
        android:autofillHints="numero 1"
        android:ems="10"
        android:hint="Valor 1"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="44dp"
        android:autofillHints="numero 2"
        android:ems="10"
        android:hint="Valor 2"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#C82A54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor1" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor2">

        <RadioButton
            android:id="@+id/Multiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Multiplicacion"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/Division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Division"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/Suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Suma"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/Resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/Resta"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:onClick="Calcular"
        android:text="@string/Calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="100dp"
        android:text="@string/Resultado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
